# FREDTOOLS

./: .gitignore  01_quickstart.ipynb  02_series_search_and_tags.ipynb  03_categories_and_releases.ipynb  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/fredtools/: ENUMS.py  __init__.py  categories.py  client.py  logging.py  releases.py  series.py  tags.py  types.py
tests/: __init__.py  conftest.py  test_categories.py  test_client.py  test_enums.py  test_logging.py  test_releases.py  test_series.py  test_tags.py  test_types.py
