[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fredtools"
version = "1.0.0"
description = "Utilities for working with Fred observations."
requires-python = ">=3.10"
authors = [
  { name = "Adam" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
]

[project.optional-dependencies]
all = [
  "httpx>=0.24",
  "pydantic>=2.0",
  "pandas>=2.0"
]
test = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
